--- a/public/pages/analyzer.html
+++ b/public/pages/analyzer.html
@@ -13,7 +13,7 @@
 
 	<div class="container-fluid" >
 	<accordion>
-	<accordion-group heading="Top Graphs" is-open="$parent.step1open" ng-init="step1open = false"> 
+	<accordion-group heading="Top Graphs" is-open="$parent.step1open" ng-init="step1open = false">
          <div class="container-fluid" >
         <div class="row">
 		<div class="col-sm-4 dashboard-panel">
@@ -60,16 +60,16 @@
                 </div>
                 </div>
         </accordion-group>
-	<accordion-group heading="Freeform Search">	
+	<accordion-group heading="Freeform Search" > 
             <div class="container-fluid">
               <div class="row">
                 <div class="input-group">
-                  <form class="form-inline col-md-12" name="form.freeform">
+                  <form class="form-inline col-md-12" >
                     <div class="form-group col-md-8">
-                      <input type="text" class="form-control" ng-model="searchText" placeholder="Search" autofocus>
+                      <input type="text" class="form-control" ng-model="form.freeform.FFsearchText" placeholder="Search" autofocus />
                     </div>
                     <div class="form-group col-md-2">
-                      <select class="form-control" ng-model="eventCode">
+                      <select class="form-control" ng-model="FFeventCode">
                           <option value="">All Event Codes</option>
                           <option ng-repeat="event in events" value="{{event.code}}">{{event.name}}</option>
                       </select>
@@ -117,8 +117,8 @@
                         <div class="panel ">
                             <a href="">
                                 <div class="panel-body">
-					<select class="form-control" size=10 style="height:100%" multiple data-live-search="true" data-selected-text-format="count>3" ng-model="graphDevices">
-						<option ng-repeat="cb_device in devices" value="{{cb_device.uuid}}">{{cb_device.name}}</option>
+					<select class="form-control" size=10 style="height:100%" multiple data-live-search="true" data-selected-text-format="count>3" ng-model="graphDevices" ng-options="cb_device.name for cb_device in devices">
+						<!--<option ng-repeat="cb_device in devices" value="{{cb_device.uuid}}">{{cb_device.name}}</option>-->
   					</select>
                                 </div>
                             </a>
@@ -167,10 +167,16 @@
                             <h3 class="panel-title">The Graph</h3>
                         </div>
                         <div class="panel panel-default">
-				Hello? Is it me you're looking for? 
+			<carousel>
+      				<slide ng-repeat="chart in eGCharts" active="chart.active">
+        				<div class="carousel-caption">
+          					<h4>Chart {{index}}</h4>
+          					<p>{{chart.text}}</p>
+        				</div>
+      				</slide>
+    			</carousel>
                         </div>
                     </div>
-
 		</div>
 	</div>
 	</accordion-group>
