--- a/public/pages/connector/advanced/devices.html
+++ b/public/pages/connector/advanced/devices.html
@@ -5,15 +5,29 @@
                 <i class="fa fa-hdd-o"></i>
                 Devices
             </div>
-            <div class="pull-right" ng-hide="editingDevice">
-                <a class="btn btn-success btn-lg" ng-click="newDevice()"><i class="fa fa-plus" style="margin-right: 5px"></i>Add</a>
+            <div class="pull-right col-sm-pull-1">
+                <form role="form" class="form-inline">
+                    <div class="form-group">
+                        <select class="form-control" ng-model="model.deviceType"
+                                ng-options="deviceType.name for deviceType in model.deviceTypes">
+
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <a href class="btn btn-success btn-lg" ng-class="{disabled: !model.deviceType}"
+                           ng-click="addDevice(model.deviceType)">
+                            <i class="fa fa-plus"></i>
+                            <span>Add Device</span>
+                            <i class="fa fa-hdd-o"></i>
+                        </a>
+                    </div>
+                </form>
+                <!--<a class="btn btn-success btn-lg" ng-click="newDevice()"><i class="fa fa-plus" style="margin-right: 5px"></i>Add</a>-->
             </div>
         </div>
 
-        <device-property-editor device-to-edit="editingDevice" on-save="saveDevice()"></device-property-editor>
-
-        <div ng-hide="devices.length">No devices found</div>
-        <table ng-show="devices.length" class="table table-striped table-hover">
+        <div ng-hide="model.devices.length">No devices found</div>
+        <table ng-show="model.devices.length" class="table table-striped table-hover">
             <tr>
                 <th>Name</th>
                 <th>UUID</th>
@@ -21,7 +35,7 @@
                 <th>Online</th>
                 <th>Action</th>
             </tr>
-            <tr ng-repeat="device in devices">
+            <tr ng-repeat="device in model.devices">
 
                 <td>{{device.name}}</td>
                 <td>{{device.uuid}}</td>
