--- a/public/pages/connector/devices/index.html
+++ b/public/pages/connector/devices/index.html
@@ -3,50 +3,49 @@
         <div class="jumbotron" ng-if="devices.length == 0">
             <p>You have no Devices or Hubs. Add a new Hub</p>
         </div>
-        <div class="col-xs-6 col-sm-6 col-md-6 col-lg-4 panel device-thumbnail" ng-repeat="device in devices | orderBy:'name'">
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 panel device-thumbnail" ng-repeat="device in devices | orderBy:'name'">
           <div class="panel-heading">
-             <h3 class="text-center col-xs-11">
-                {{device.name}}
-             </h3>
-              <h3 class="pull-right">
-                  <i class="fa fa-power-off" ng-class="{'text-success': device.online, 'text-muted': ! device.online}"></i>
-              </h3>
+            <div class="pull-left col-xs-1">
+                <a class="btn btn-danger" ng-click="deleteDevice(device)" tooltip="Delete Device" tooltip-placement="right" tooltip-popup-delay="10">
+                    <i class="fa fa-trash-o"></i>
+                </a>
+            </div>
 
+             <div class="col-xs-10">
+                <h3 class="text-center">{{device.name}}</h3>
+             </div>
+              <div class="pull-right col-xs-1">
+                  <i class="fa fa-power-off fa-2x" ng-class="{'text-success': device.online, 'text-muted': ! device.online}" tooltip="Online Indicator - Online: {{device.online}}" tooltip-placement="left" tooltip-popup-delay="10"></i>
+              </div>
           </div>
          <div class="panel-body center-block">
 
-                <span class="fa fa-stack fa-5x col-xs-push-3">
-                    <i class="fa fa-square-o fa-stack-2x"></i>
-                    <i class="fa fa-stack-1x" ng-class="{'fa-h-square' : device.type === 'gateway', 'fa-mobile' : device.type === 'mobile-hub', 'fa-hdd-o' : ! device.type || device.type == 'device'}"></i>
-                </span>
-
-
+             <div class="device-image-container center-block">
+                 <img class="device-image" src="{{getDeviceTypeLogo(device)}}" />
+             </div>
              <div class="btn-group btn-group-justified">
                  <div class="btn-group">
-                     <a href ui-sref="^.detail({uuid : device.uuid})" class="btn btn-default">
+                     <a href ui-sref="^.detail({uuid : device.uuid})" class="btn btn-default" tooltip="Show Device Details" tooltip-placement="top" tooltip-popup-delay="10">
                          <i class="fa fa-th-large fa-lg" style="margin-right: 5px;"></i>Details
                      </a>
                  </div>
                  <div class="btn-group">
-                     <a href class="btn btn-inverse" ng-click="editDevice(device)">
+                     <a href class="btn btn-inverse" ng-click="editDevice(device)" tooltip="Edit Device" tooltip-placement="top" tooltip-popup-delay="10">
                          <i class="fa fa-edit fa-lg">&nbsp;&nbsp;</i>Edit
                      </a>
                  </div>
-                 <div class="btn-group">
-                     <button type=button" class="btn btn-danger" ng-click="deleteDevice(device)">
-                         <i class="fa fa-trash-o fa-lg" style="margin-right: 5px;"></i>Delete
-                     </button>
-                 </div>
              </div>
          </div>
-
         </div>
     </div>
-    <div class="col-xs-12 col-sm-6 col-md-2 col-lg-2 device-actions">
+    <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2 device-actions">
         <div>
             <div class="btn-group btn-group-justified">
                 <div class="btn-group">
-                    <a class="btn btn-inverse btn-lg add-device device-action-button" href ui-sref="^.wizard.instructions"><i class="fa fa-h-square fa-2x pull-left"></i><span>Add Hub</span></a>
+                    <a class="btn btn-inverse btn-lg add-device device-action-button" href ui-sref="ob.connector.devices.wizard.instructions({claim:'gateway'})">
+                        <i class="fa fa-h-square fa-2x pull-left"></i>
+                        <span>Add Hub</span>
+                    </a>
                 </div>
             </div>
             <div ng-if="hasHubs" class="panel subdevice-actions">
@@ -64,7 +63,7 @@
             <div class="btn-group btn-group-justified">
 
                 <div class="btn-group">
-                    <a class="btn btn-inverse btn-lg claim-device device-action-button">
+                    <a class="btn btn-inverse btn-lg claim-device device-action-button" href ui-sref="ob.connector.devices.wizard.finddevice({claim :'device'})" tooltip="Claim Device" tooltip-placement="bottom" tooltip-popup-delay="10">
                         <i class="fa fa-hand-o-right fa-2x pull-left"></i>
                         <span>Claim Device</span>
                     </a>
@@ -75,7 +74,7 @@
                     <h4 class="text-center"><i class="fa fa-hdd-o fa-2x pull-left"></i><span>Add Device</span></h4>
                 </div>
                 <div class="panel-body">
-                    <a   ng-class="{'unavailable': !deviceType.enabled }" ng-repeat="deviceType in deviceTypes" class="subdevice pull-left" ng-click="addDevice(deviceType)" style="margin: 0 0 15px 15px; " tooltip="Add new {{deviceType.name}}" tooltip-placement="left" tooltip-popup-delay="10" >
+                    <a   ng-class="{'unavailable': !deviceType.enabled }" ng-repeat="deviceType in deviceTypes | filterBy:{ display : true }" class="subdevice pull-left" ng-click="addDevice(deviceType)" style="margin: 0 0 15px 15px; " tooltip="Add new {{deviceType.name}}" tooltip-placement="left" tooltip-popup-delay="10" >
                         <img src="{{deviceType.logo}}" alt="{{deviceType.name}}"  width="80" height="80"  ng-model="deviceType" />
                     </a>
 
