--- a/public/pages/connector/devices/index.html
+++ b/public/pages/connector/devices/index.html
@@ -74,7 +74,7 @@
                     <h4 class="text-center"><i class="fa fa-hdd-o fa-2x pull-left"></i><span>Add Device</span></h4>
                 </div>
                 <div class="panel-body">
-                    <a   ng-class="{'unavailable': !deviceType.enabled }" ng-repeat="deviceType in deviceTypes | filterBy:{ display : true }" class="subdevice pull-left" ng-click="addDevice(deviceType)" style="margin: 0 0 15px 15px; " tooltip="Add new {{deviceType.name}}" tooltip-placement="left" tooltip-popup-delay="10" >
+                    <a   ng-class="{'unavailable': !deviceType.enabled }" ng-repeat="deviceType in deviceTypes | filter :{ display : true }" class="subdevice pull-left" ng-click="addDevice(deviceType)" style="margin: 0 0 15px 15px; " tooltip="Add new {{deviceType.name}}" tooltip-placement="left" tooltip-popup-delay="10" >
                         <img src="{{deviceType.logo}}" alt="{{deviceType.name}}"  width="80" height="80"  ng-model="deviceType" />
                     </a>
 
