--- a/public/pages/connector/advanced/gateways/index.html
+++ b/public/pages/connector/advanced/gateways/index.html
@@ -22,7 +22,7 @@
                             <select ng-model="selectedDeviceType"
                                     ng-options="deviceType.name for deviceType in availableDeviceTypes | filter: {enabled : true}">
                             </select>
-                            <a href class="btn btn-success" ng-class="{disabled : ! selectedDeviceType }" ng-click="editSubdevice(hub, selectedDeviceType.plugin)"><i class="fa fa-plus"></i>Add</a>
+                            <a href class="btn btn-success" ng-class="{disabled : ! selectedDeviceType }" ng-click="editSubdevice(hub, selectedDeviceType.skynet.plugin)"><i class="fa fa-plus"></i>Add</a>
                         </div>
                         <div class="table-responsive">
                             <table class="table table-striped table-hover">
