--- a/public/pages/connector/devices/index.html
+++ b/public/pages/connector/devices/index.html
@@ -69,7 +69,7 @@
                     </a>
                 </div>
             </div>
-            <div ng-if="hasHubs" class="panel subdevice-actions">
+            <div class="panel subdevice-actions">
                 <div class="panel-heading">
                     <h4 class="text-center"><i class="fa fa-hdd-o fa-2x pull-left"></i><span>Add Device</span></h4>
                 </div>
