--- a/public/pages/analyze.html
+++ b/public/pages/analyze.html
@@ -9,7 +9,7 @@
 
 <div class="container-fluid">
 <accordion>
-<accordion-group heading="Top Graphs" is-open="$parent.step1open" ng-init="step1open = false">
+<accordion-group heading="Top Graphs" >
     <div class="container-fluid">
         <div class="row">
             <div class="col-sm-4 dashboard-panel">
@@ -20,9 +20,10 @@
                     <a href="">
                         <div class="panel-body">
                             <div ng-switch="!!topResults.fromUuid ? 1 : 0">
-                                <div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>
+                               <div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>
                                 <div ng-switch-default>
-                                    <div nvd3-pie-chart data="topResults.fromUuid" height="300"></div>
+                                    <div nvd3-pie-chart x="xFunction()" y="yFunction()" data="topResults.fromUuid" height="300">
+					</div>
                                 </div>
                             </div>
                         </div>
@@ -94,7 +95,7 @@
         </div>
         <input type="checkbox" ng-model="checked"> pretty print?
         <div class="panel-body">
-		<table ng-table="freeform_results" show-filter="true" class="table">
+		<table ng-table="freeform_results_ngTable" show-filter="true" class="table">
 	        <thead>
         	<tr>
 	            <th ng-repeat="column in columns" ng-show="column.visible"
@@ -203,18 +204,14 @@
 					<td>{{leg.dcUUIDs}}</td>
 				    </tr>
                                 </table>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-lg-12 dashboard-panel">
-                            <div class="form-group col-md-2 text-center">
-		                      <span class="input-group-btn">
-                		          <button class="btn btn-default" type="button" ng-click="loadExploreGraph()">
+			<div class="form-group col-md-2 text-center">
+				<span class="input-group-btn">
+                                          <button class="btn btn-default" type="button" ng-click="loadExploreGraph()">
                                       <span class="glyphicon glyphicon-search"> Find</span>
                                   </button>
-                		      </span>
+                                      </span>
                             </div>
+			  </div>
                         </div>
                     </div>
             </form>
@@ -226,17 +223,15 @@
                 <h3 class="panel-title">Event Counts over Time</h3>
             </div>
             <div class="panel panel-default">
-                <a href="" ui-sref="^.analyzer">
                     <div class="panel-body">
                         <div ng-switch="!!leg ? 1 : 0">
                             <div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>
                             <div ng-switch-default>
                                 <div nvd3-line-chart show-legend="True" axis-x-label="Hour" axis-x-type="date"
-                                     axis-x-format="%-m/%-d %-H:%-M" data="leg.eventCounts" height="300"></div>
+                                     axis-x-format="%-m/%-d %-H:%-M" data="leg.eventCounts" height="400" ></div>
                             </div>
                         </div>
                     </div>
-                </a>
             </div>
         </div>
 
