--- a/public/index.html
+++ b/public/index.html
@@ -140,6 +140,7 @@
 <script src="angular/controllers/login.js"></script>
 <script src="angular/controllers/pricing.js"></script>
 <script src="angular/controllers/profile.js"></script>
+<script src="angular/controllers/reset.js"></script>
 <script src="angular/controllers/services.js"></script>
 <script src="angular/controllers/signup.js"></script>
 <!-- endbuild -->
