--- a/public/pages/analyzer.html
+++ b/public/pages/analyzer.html
@@ -228,7 +228,7 @@
                             <div ng-switch-when="0"><h1><i class="fa fa-cog fa-spin"></i></h1></div>
                             <div ng-switch-default>
                                 <div nvd3-line-chart show-legend="True" axis-x-label="Hour" axis-x-type="date"
-                                     axis-x-format="%-m/%-d %-H:%-M" data="leg.eventCounts" height="400" ></div>
+                                     axis-x-format="%-m/%-d %-H:%-M" data="leg.uuid_counts" height="400" ></div>
                             </div>
                         </div>
                     </div>
