--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -1,19 +1,74 @@
-<div class='col-xs-12'>
-    <div class='page-header page-header-with-buttons'>
-        <h1 class='pull-left'>
-            <i class="fa fa-user"></i>
-            <span>Profile - {{currentUser.displayName}}</span>
+<div class="col-xs-12">
+  <div class="row">
+    <div class="col-xs-12">
+      <div class="page-header page-header-with-buttons">
+        <h1 class="pull-left">
+          <i class="fa fa-user"></i>
+          <span>Profile - {{currentUser.displayName}}</span>
         </h1>
+      </div>
     </div>
-    <div class="row">
-        <div class="col-sm-12">
-            <h2 style="margin-bottom: 30px;">
-                <strong>Your UUID is:</strong> {{currentUser.skynetuuid}}
-            </h2>
-        </div>
-        <div>
-            <pre>{{currentUser | json}}</pre>
-        </div>
+  </div>
+
+  <div class="row">
+    <div class="col-xs-12">
+      <!-- <h2 class="col-sm-offset-2">Change Password</h2> -->
+      <form action="#" name="passwordForm" class="form-horizontal">
+        <fieldset>
+          <legend>Change Password</legend>
+
+          <div class="form-group" ng-class="{'has-error': passwordForm.oldPassword.$invalid && passwordForm.oldPassword.$dirty}">
+            <label for="old-password" class="col-sm-2 control-label">Old Password</label>
+            <div class="col-sm-10">
+              <input ng-model="oldPassword" id="old-password" name="oldPassword" type="password" class="form-control" required>
+              <p class="help-block" ng-if="passwordForm.oldPassword.$invalid && passwordForm.oldPassword.$dirty">
+                <span ng-show="passwordForm.oldPassword.$error.required">Old password is required.</span>
+              </p>
+            </div>
+          </div>
+
+          <div class="form-group" ng-class="{'has-error': passwordForm.confirmNewPassword.$invalid && passwordForm.confirmNewPassword.$dirty}">
+            <label for="newPassword" class="col-sm-2 control-label">New Password</label>
+            <div class="col-sm-10">
+              <input ng-model="newPassword" id="newPassword" name="newPassword" type="password" class="form-control" required>
+            </div>
+          </div>
+
+          <div class="form-group" ng-class="{'has-error': passwordForm.confirmNewPassword.$invalid && passwordForm.confirmNewPassword.$dirty}">
+            <label for="confirmNewPassword" class="col-sm-2 control-label">Confirm Password</label>
+            <div class="col-sm-10">
+              <input ng-model="confirmNewPassword" id="confirmNewPassword" name="confirmNewPassword" type="password"  class="form-control" ng-change="validateConfirmPassword(passwordForm)" required>
+              <p class="help-block" ng-if="passwordForm.confirmNewPassword.$invalid && passwordForm.confirmNewPassword.$dirty">
+                <span ng-show="passwordForm.confirmNewPassword.$error.matches">
+                  New Password and Password Confirmation must match.
+                </span>
+              </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="form-group">
+            <div class="col-sm-offset-2 col-sm-10">
+              <input type="submit" class="btn btn-block btn-primary" value="Submit" ng-class="{'disabled': passwordForm.$invalid}">
+            </div>
+          </div>
+        </fieldset>
+      </form>
     </div>
-    
+  </div>
+
+  <hr>
+
+  <div class="row">
+  <div class="col-xs-12">
+      <div class="alert alert-info">
+        <h4>
+          <strong>Your UUID is:</strong> {{currentUser.skynetuuid}}
+        </h4>
+        <h4>
+          <strong>Your Token is:</strong> {{currentUser.skynettoken}}
+        </h4>
+      </div>
+    </div>
+  </div>
 </div>
