--- a/public/pages/profile.html
+++ b/public/pages/profile.html
@@ -13,7 +13,7 @@
   <div class="row">
     <div class="col-xs-12">
       <!-- <h2 class="col-sm-offset-2">Change Password</h2> -->
-      <form action="#" name="passwordForm" class="form-horizontal">
+      <form name="passwordForm" class="form-horizontal" ng-submit="updatePassword()">
         <fieldset>
           <legend>Change Password</legend>
 
@@ -30,7 +30,7 @@
           <div class="form-group" ng-class="{'has-error': passwordForm.confirmNewPassword.$invalid && passwordForm.confirmNewPassword.$dirty}">
             <label for="newPassword" class="col-sm-2 control-label">New Password</label>
             <div class="col-sm-10">
-              <input ng-model="newPassword" id="newPassword" name="newPassword" type="password" class="form-control" required>
+              <input ng-model="newPassword" id="newPassword" name="newPassword" type="password" class="form-control" ng-change="validateConfirmPassword(passwordForm)" required>
             </div>
           </div>
 
