--- a/public/index.html
+++ b/public/index.html
@@ -153,5 +153,27 @@
 <script src="angular/controllers/services.js"></script>
 <script src="angular/controllers/signup.js"></script>
 <!-- endbuild -->
+
+<!-- Designer Dependencies -->
+<script src="/assets/design/ba-tiny-pubsub.js"></script>
+<script src="/assets/design/orion/built-editor.min.js"></script>
+<script src="/assets/design/d3.v3.min.js"></script>
+<script src="/assets/design/red/main.js"></script>
+<script src="/assets/design/red/ui/state.js"></script>
+<script src="/assets/design/red/nodes.js"></script>
+<script src="/assets/design/red/history.js"></script>
+<script src="/assets/design/red/validators.js"></script>
+<script src="/assets/design/red/ui/keyboard.js"></script>
+<script src="/assets/design/red/ui/tabs.js"></script>
+<script src="/assets/design/red/ui/view.js"></script>
+<script src="/assets/design/red/ui/sidebar.js"></script>
+<script src="/assets/design/red/ui/palette.js"></script>
+<script src="/assets/design/red/ui/tab-info.js"></script>
+<script src="/assets/design/red/ui/tab-config.js"></script>
+<script src="/assets/design/red/ui/editor.js"></script>
+<script src="/assets/design/red/ui/library.js"></script>
+<script src="/assets/design/red/ui/notifications.js"></script>
+<script src="/lib/bootstrap/dist/js/bootstrap.js"></script>
+<!-- End Designer Dependencies -->
 </body>
 </html>
