--- a/public/pages/design.html
+++ b/public/pages/design.html
@@ -305,34 +305,10 @@
     </div>
 </script>
 
-
-
-<script src="/assets/design/jquery/js/jquery-1.9.1.js"></script>
-<script src="/assets/design/ba-tiny-pubsub.js"></script>
-<script src="/assets/design/bootstrap/js/bootstrap.min.js"></script>
-<script src="/assets/design/jquery/js/jquery-ui-1.10.3.custom.min.js"></script>
-<script src="/assets/design/orion/built-editor.min.js"></script>
-<script src="/assets/design/d3.v3.min.js"></script>
-<script src="/assets/design/red/main.js"></script>
-<script src="/assets/design/red/ui/state.js"></script>
-<script src="/assets/design/red/nodes.js"></script>
-<script src="/assets/design/red/history.js"></script>
-<script src="/assets/design/red/validators.js"></script>
-<script src="/assets/design/red/ui/keyboard.js"></script>
-<script src="/assets/design/red/ui/tabs.js"></script>
-<script src="/assets/design/red/ui/view.js"></script>
-<script src="/assets/design/red/ui/sidebar.js"></script>
-<script src="/assets/design/red/ui/palette.js"></script>
-<script src="/assets/design/red/ui/tab-info.js"></script>
-<script src="/assets/design/red/ui/tab-config.js"></script>
-<script src="/assets/design/red/ui/editor.js"></script>
-<script src="/assets/design/red/ui/library.js"></script>
-<script src="/assets/design/red/ui/notifications.js"></script>
-
 </div>
 <script>
-$('#designerFrame').attr('height',$("body").height()-106);
-window.onresize = function(event) {
-  $('#designerFrame').attr('height',$("body").height()-106);
-}
+// $('#designerFrame').attr('height',$("body").height()-106);
+// window.onresize = function(event) {
+  // $('#designerFrame').attr('height',$("body").height()-106);
+// }
 </script>
