--- a/public/pages/design.html
+++ b/public/pages/design.html
@@ -9,37 +9,37 @@
                 <div class="btn-group pull-right">
                     <a class="btn btn-lg btn-default dropdown-toggle" data-toggle="dropdown" href><i class="icon-align-justify"></i> <span class="caret"></span></a>
                     <ul class="dropdown-menu">
-                        <li><a id="btn-sidebar" tabindex="-1" href="#"><i class="icon-ok pull-right"></i><i class="icon-list-alt"></i> Sidebar</a></li>
+                        <li><a id="btn-sidebar" tabindex="-1" href><i class="icon-ok pull-right"></i><i class="icon-list-alt"></i> Sidebar</a></li>
                         <li class="divider"></li>
-                        <li class="dropdown-submenu pull-left"><a tabindex="-1" href="#"><i class="icon-edit"></i> Import from...</a>
+                        <li class="dropdown-submenu pull-left"><a tabindex="-1" href><i class="icon-edit"></i> Import from...</a>
                             <ul class="dropdown-menu">
-                                <li><a id="btn-import" tabindex="-1" href="#"><i class="icon-edit"></i> Clipboard...</a></li>
+                                <li><a id="btn-import" tabindex="-1" href><i class="icon-edit"></i> Clipboard...</a></li>
                                 <li id="flow-menu-parent" class="dropdown-submenu pull-left">
-                                    <a tabindex="-1" href="#"><i class="icon-book"></i> Library</a>
+                                    <a tabindex="-1" href><i class="icon-book"></i> Library</a>
                                     <ul class="dropdown-menu"></ul>
                                 </li>
                             </ul>
                         </li>
-                        <li id="li-menu-export" class="dropdown-submenu disabled pull-left"><a tabindex="-1" href="#"><i class="icon-share"></i> Export to...</a>
+                        <li id="li-menu-export" class="dropdown-submenu disabled pull-left"><a tabindex="-1" href><i class="icon-share"></i> Export to...</a>
                             <ul class="dropdown-menu">
-                                <li id="li-menu-export-community" class="disabled"><a id="btn-export-community" tabindex="-1" href="#"><i class="icon-share"></i> Share...</a></li>
-                                <li id="li-menu-export-clipboard" class="disabled"><a id="btn-export-clipboard" tabindex="-1" href="#"><i class="icon-share"></i> Clipboard...</a></li>
-                                <li id="li-menu-export-library" class="disabled"><a id="btn-export-library" tabindex="-1" href="#"><i class="icon-book"></i> Library...</a></li>
+                                <li id="li-menu-export-community" class="disabled"><a id="btn-export-community" tabindex="-1" href><i class="icon-share"></i> Share...</a></li>
+                                <li id="li-menu-export-clipboard" class="disabled"><a id="btn-export-clipboard" tabindex="-1" href><i class="icon-share"></i> Clipboard...</a></li>
+                                <li id="li-menu-export-library" class="disabled"><a id="btn-export-library" tabindex="-1" href><i class="icon-book"></i> Library...</a></li>
                             </ul>
                         </li>
                         <li class="divider"></li>
-                        <li><a id="btn-config-nodes" tabindex="-1" href="#"><i class="icon-th-list"></i> Configuration nodes...</a></li>
+                        <li><a id="btn-config-nodes" tabindex="-1" href><i class="icon-th-list"></i> Configuration nodes...</a></li>
                         <li class="divider"></li>
-                        <li class="dropdown-submenu pull-left"><a tabindex="-1" href="#"><i class="icon-th-large"></i> Workspaces</a>
+                        <li class="dropdown-submenu pull-left"><a tabindex="-1" href><i class="icon-th-large"></i> Workspaces</a>
                             <ul id="workspace-menu-list" class="dropdown-menu">
-                                <li><a id="btn-workspace-add" tabindex="-1" href="#"><i class="icon-plus"></i> Add</a></li>
-                                <li><a id="btn-workspace-edit" tabindex="-1" href="#"><i class="icon-edit"></i> Rename</a></li>
-                                <li><a id="btn-workspace-delete" tabindex="-1" href="#"><i class="icon-minus"></i> Delete</a></li>
+                                <li><a id="btn-workspace-add" tabindex="-1" href><i class="icon-plus"></i> Add</a></li>
+                                <li><a id="btn-workspace-edit" tabindex="-1" href><i class="icon-edit"></i> Rename</a></li>
+                                <li><a id="btn-workspace-delete" tabindex="-1" href><i class="icon-minus"></i> Delete</a></li>
                                 <li class="divider"></li>
                             </ul>
                         </li>
                         <li class="divider"></li>
-                        <li><a id="btn-keyboard-shortcuts" tabindex="-1" href="#"><i class="icon-question-sign"></i> Keyboard Shortcuts</a></li>
+                        <li><a id="btn-keyboard-shortcuts" tabindex="-1" href><i class="icon-question-sign"></i> Keyboard Shortcuts</a></li>
                         <li><a id="btn-help" tabindex="-1" href="http://node-red.github.io/docs" target="_blank"><i class="icon-question-sign"></i> Help...</a></li>
                     </ul>
                 </div>
@@ -104,28 +104,28 @@
                 </div>
             </div>
             <div id="palette-search">
-                <i class="icon-search"></i><input id="palette-search-input" type="text" placeholder="filter"><a href="#" id="palette-search-clear"><i class="icon-remove"></i></a></input>
+                <i class="icon-search"></i><input id="palette-search-input" type="text" placeholder="filter"><a href id="palette-search-clear"><i class="icon-remove"></i></a></input>
             </div>
         </div><!-- /palette -->
 
         <div id="workspace">
             <ul id="workspace-tabs"></ul>
-            <div id="workspace-add-tab"><a id="btn-workspace-add-tab" href="#"><i class="icon-plus"></i></a></div>
+            <div id="workspace-add-tab"><a id="btn-workspace-add-tab" href><i class="icon-plus"></i></a></div>
             <div id="chart"></div>
             <div id="workspace-toolbar">
                 <div class="btn-group">
-                    <a class="btn btn-small" href="#"><i class="icon-zoom-out"></i></a>
-                    <a class="btn btn-small" href="#"><i class="icon-th"></i></a>
-                    <a class="btn btn-small" href="#"><i class="icon-zoom-in"></i></a>
+                    <a class="btn btn-small" href><i class="icon-zoom-out"></i></a>
+                    <a class="btn btn-small" href><i class="icon-th"></i></a>
+                    <a class="btn btn-small" href><i class="icon-zoom-in"></i></a>
                 </div>
             </div>
         </div>
 
         <div id="chart-zoom-controls">
             <div class="btn-group">
-                <a class="btn btn-mini" id="btn-zoom-out" href="#"><i class="icon-zoom-out"></i></a>
-                <a class="btn btn-mini" id="btn-zoom-zero" href="#"><i class="icon-th"></i></a>
-                <a class="btn btn-mini" id="btn-zoom-in" href="#"><i class="icon-zoom-in"></i></a>
+                <a class="btn btn-mini" id="btn-zoom-out" href><i class="icon-zoom-out"></i></a>
+                <a class="btn btn-mini" id="btn-zoom-zero" href><i class="icon-th"></i></a>
+                <a class="btn btn-mini" id="btn-zoom-in" href><i class="icon-zoom-in"></i></a>
             </div>
         </div>
 
@@ -141,10 +141,10 @@
     <div id="notifications"></div>
     <div id="dropTarget"><div>Drop the flow here</div></div>
 
-    <div id="dialog" class="hide"><form id="dialog-form" class="form-horizontal"></form></div>
-    <div id="node-config-dialog" class="hide"><form id="dialog-config-form" class="form-horizontal"></form><div class="form-tips" id="node-config-dialog-user-count"></div></div>
+    <div id="dialog"><form id="dialog-form" class="form-horizontal"></form></div>
+    <div id="node-config-dialog"><form id="dialog-config-form" class="form-horizontal"></form><div class="form-tips" id="node-config-dialog-user-count"></div></div>
 
-    <div id="node-dialog-confirm-deploy" class="hide">
+    <div id="node-dialog-confirm-deploy">
         <form class="form-horizontal">
             <div id="node-dialog-confirm-deploy-config" style="text-align: center; padding-top: 30px;">
              Some of the nodes are not properly configured. Are you sure you want to deploy?
@@ -157,7 +157,7 @@
         </form>
     </div>
 
-    <div id="node-help" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="node-help-label" aria-hidden="true">
+    <div id="node-help" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="node-help-label" aria-hidden="true">
       <div class="modal-header">
         <h5 id="node-help-label">Keyboard Shortcuts <span style="float: right;"><a href="http://node-red.github.io/docs" target="_blank">Open help in new window &raquo;</a></span></h5>
       </div>
@@ -230,7 +230,7 @@
         <form class="form-horizontal">
             <div class="form-row">
                 <ul id="node-dialog-library-breadcrumbs" class="breadcrumb">
-                    <li class="active"><a href="#">Library</a> <span class="divider">/</span></li>
+                    <li class="active"><a href>Library</a> <span class="divider">/</span></li>
                 </ul>
             </div>
             <div class="form-row">
@@ -243,7 +243,8 @@
             </div>
         </form>
     </div>
-    <div id="node-dialog-rename-workspace" class="hide">
+
+    <div id="node-dialog-rename-workspace">
         <form class="form-horizontal">
             <div class="form-row">
                 <label for="node-input-workspace-name" ><i class="icon-tag"></i> Name:</label>
@@ -251,7 +252,7 @@
             </div>
         </form>
     </div>
-    <div id="node-dialog-delete-workspace" class="hide">
+    <div id="node-dialog-delete-workspace">
         <form class="form-horizontal">
             <div style="text-align: center; padding-top: 30px;">
              Are you sure you want to delete '<span id="node-dialog-delete-workspace-name"></span>'?
