--- a/public/pages/connector/nodes/index.html
+++ b/public/pages/connector/nodes/index.html
@@ -31,7 +31,7 @@
              class="col-xs-6 col-sm-4 col-md-3 col-lg-2">
             <h4 class="text-center">
               <a href ng-href="{{nextStepUrl(node)}}" class="">
-                <div title="{{node.name}}" class="node-thumbnail animated-popout" ng-style="{'background-image': 'url('+node.nodeType.logo+')'}" title="{{node.name}}" ng-class="{faded: !isAvailable(node)}"></div>
+                <div title="{{node.name}}" class="node-thumbnail animated-popout" ng-style="{'background-image': 'url('+node.nodeType.logo+')'}" title="{{node.name}}" ng-class="{faded: !node.online}"></div>
                 <strong class="muted-link">{{node.name}}</strong>
               </a>
             </h4>
