--- a/public/pages/design.html
+++ b/public/pages/design.html
@@ -95,18 +95,18 @@
             <div id="chart"></div>
             <div id="workspace-toolbar">
                 <div class="btn-group">
-                    <a class="btn btn-small" href><i class="fa fa-zoom-out"></i></a>
+                    <a class="btn btn-small" href><i class="fa fa-search-minus"></i></a>
                     <a class="btn btn-small" href><i class="fa fa-th"></i></a>
-                    <a class="btn btn-small" href><i class="fa fa-zoom-in"></i></a>
+                    <a class="btn btn-small" href><i class="fa fa-search-plus"></i></a>
                 </div>
             </div>
         </div>
 
         <div id="chart-zoom-controls">
             <div class="btn-group">
-                <a class="btn btn-mini" id="btn-zoom-out" href><i class="fa fa-zoom-out"></i></a>
+                <a class="btn btn-mini" id="btn-zoom-out" href><i class="fa fa-search-minus"></i></a>
                 <a class="btn btn-mini" id="btn-zoom-zero" href><i class="fa fa-th"></i></a>
-                <a class="btn btn-mini" id="btn-zoom-in" href><i class="fa fa-zoom-in"></i></a>
+                <a class="btn btn-mini" id="btn-zoom-in" href><i class="fa fa-search-plus"></i></a>
             </div>
         </div>
 
